--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,8 @@ annotated-types==0.7.0
 anyio==4.8.0
 asttokens==3.0.0
 attrs==24.3.0
-azure-ai-inference==1.0.0b8
-azure-ai-projects==1.0.0b5
+azure-ai-inference==1.0.0b9 #previously 1.0.0b8
+azure-ai-projects==1.0.0b11 #previously 1.0.0b5
 azure-core==1.32.0
 azure-identity==1.19.0
 certifi==2024.12.14
